style: Added custom font and changed some colours

--- a/my-app/styles/Home.module.css
+++ b/my-app/styles/Home.module.css
@@ -1,16 +1,20 @@
 .main {
   min-height: 90vh;
+  padding: 0 4rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: "Courier New", Courier, monospace;
+  font-weight: 100;
+  font-family: 'Roboto',
+  sans-serif;
 }
 
 .footer {
   display: flex;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
+  color: lightgray;
   justify-content: center;
   align-items: center;
 }
@@ -43,7 +47,7 @@
 
 .button {
   border-radius: 4px;
-  background-color: purple;
+  background-color: #2e186a;
   border: none;
   color: #ffffff;
   font-size: 15px;
@@ -74,7 +78,7 @@
 
 .button1 {
   border-radius: 4px;
-  background-color: blue;
+  background-color: #2e186a;
   border: none;
   color: #ffffff;
   font-size: 15px;
